:art: refactoring with BaseService interface and add Pagination